# Django_template

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
ofb_api/ofb_api/: settings.py  urls.py  wsgi.py
ofb_api/ofb_core/: apps.py  models.py  pagination.py
ofb_api/ofb_core/migrations/: 0001_initial.py
ofb_api/ofb_document/: models.py  views.py
ofb_api/ofb_document/migrations/: 0001_initial.py
src/: create_users.py  manage.py
src/ofb_api/: asgi.py  settings.py  urls.py
src/ofb_core/: admin.py  constants.py  serializer.py  urls.py  views.py
src/ofb_document/: apps.py  constants.py  serializer.py  urls.py  views.py
